<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.com.codesa.codesaapp.fragments.producto.ProductoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/producto" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codigo"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nombre" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">

                <EditText
                    android:id="@+id/txtFechVenc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/fecha_vencimiento" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btnShowDatePickerFechVenc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_date_range_black_36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.95">

                <EditText
                    android:id="@+id/txtFechProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fecha_produccion"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btnShowDatePickerFechProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_date_range_black_36dp" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textLongMessage"
                android:hint="@string/descripcion" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <ImageButton
        android:id="@+id/btnValidarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_forward_black_48dp" />
</FrameLayout>
